--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
-Hello
+<html>
+<head>
+  <title>Martin Koehler</title>
+  <link rel="stylesheet" type="text/css" href="css/layout.css">
+</head>
+<body>
+<h1>Martin Koehler</h1>
+<p><strong>School of Computer Science, University of Manchester</strong></p>
+
+<span><i>
+  <a href="mailto://martin.koehler_at_manchester.ac.uk">E-Mail</a> |
+  <a href="https://scholar.google.com/citations?user=tqx-YdEAAAAJ&hl=de">Google Scholar</a> |
+  <a href="http://at.linkedin.com/in/koehler2">LinkedIn</a> |
+  <a href="https://www.xing.com/profile/Martin_Koehler5">Xing</a> |
+  <a href="https://www.researchgate.net/profile/Martin_Koehler">ResearchGate</a> |
+  <a href="http://dblp.uni-trier.de/pers/hd/k/Koehler:Martin">dblp</a> |
+  <a href="http://www.ocg.at/de/cloud-computing-big-data">OCG Working Group Cloud &amp; Big Data</a> |
+  <a href="http://www.meetup.com/Austrian-Cloud-and-Big-Data-Forum/">Austrian Cloud and Big Data Forum</a></i>
+</span>
+<p></p>
+<img src="img/itsame.png" style="float:right;width:120px; padding: 0 0 0 10px;"/>
+<p>Since November 2015, I am a research associate at the information management group, school of computer science,  <a href="computer science manchester entry requirements">University of Manchester</a>. I am engaged in data integration research in the context of the <a href="http://vada.org.uk">VADA &ndash; Value Added Data Systems</a> EPSRC grant. My research interests include distributed data access and integration, data-intensive computing, high-performance computing and autonomic computing.</p>
+<p>I studied &ldquo;economics and computer science&rdquo; at the Vienna University of Technology (MSc 2006) and received my PhD in &ldquo;economics and computer science&rdquo; from University of Vienna in 2012. I worked as a research assistant at the University of Vienna (2006-2013). During this time I did research as part of the national project FSB Aurora, the University lead project CPAMMS, the European project @neurIST, and the European project VPH-Share. From 2013 to 2015 I worked at the mobility department of the AIT Austrian Institute of Technology GmbH on research issues relating to the efficient use of big data and cloud computing technologies in dynamic transportation. I coordinated the Austrian research project &ldquo;RETIDA &ndash; Real Time data analytics in the mobility domain&rdquo; working on adaptively optimizing execution plans for real-time data analysis over multiple large-scale (un-)structured data sources on heterogeneous high-performance computing resources and have been work package leader in the H2020 project OPTIMUM on multi-source data fusion for intelligent mobility.</p>
+<p> I authored and co-authored more than 20 scientific publications in refereed journals and international conferences and presented more than 10 invited talks. I taught at the Universities of Applied Sciences Technikum Wien, St. Poelten, and Wiener Neustadt and at the Univeristy of Vienna. Since autumn 2013, I am one of the leaders of the Workgroup "Cloud Computing and Big Data&rdquo; of the Austrian computer society (<a href="https://www.ocg.at/">OCG</a>).</p>
+<p></p>
+<p><strong>Research projects:</strong></p>
+<ul>
+<li><a href="http://vada.org.uk/">VADA: Value Added Data Systems - Principles and Architecture</a>, EPSRC grant</li>
+</ul>
+<p><strong>Past research projects:</strong></p>
+<ul>
+<li><a href="http://www.optimumproject.eu/">European project OPTIMUM</a> - Multi-source Big Data Fusion Driven Proactivity for Intelligent Mobility, H2020-MG-2014</li>
+<li><a href="ttps://dts.ait.ac.at/projects/retida/">RETIDA</a> - Real-Time Data Analytics in the Mobility Domain, FFG project (Austrian Research Promotion Agency), project 07/2014 &ndash; 12/2016</li>
+<li><a href="http://www.bmvit.gv.at/service/publikationen/innovation/downloads/big_data_in_austria.pdf">#BigData in #Austria</a> - oesterreichische Potenziale und Best Practice f&uuml;r Big Data, Austrian Research Promotion Agency, 11/2013 &ndash; 04/2014</li>
+<li><a href="http://www.crossingborders.cc/en/">Crossing Borders</a>, Austrian Research Promotion Agency flagship project, 01/2013 &ndash; 12/2015</li>
+<li><a href="ttp://www.logistikum.at/uploads/tx_logistikum/Projektinfoblatt_iSTRADA.pdf">iSTRADA</a> - Intelligent System for Traffic and Road-infrastructure relAted Data, FFG project (Austrian Research Promotion Agency), 04/2015 &ndash; 03/16 </li>
+<li><a href="http://vph-portal.eu/vph-share">European project VPH-Share</a>, 03/2011- 02/2015</li>
+<li><a href="http://www.aneurist.org/">European project @neurIST</a>, 01/2006 &ndash; 03/2010</li>
+<li><a href="http://cpamms.univie.ac.at/">University project CPAMMS</a></li>
+<li><a href="http://homepage.univie.ac.at/siegfried.benkner/aurora/project2/index.html">FSB Aurora</a></li>
+</ul>
+<p><strong>Teaching activities</strong></p>
+<ul>
+<li><a href="http://ufind.univie.ac.at/en/person.html?id=26917&amp;teaching=true">University of Vienna</a></li>
+<li><a href="http://www.technikum-wien.at">University of Applied Sciences Technikum Wien</a></li>
+<ul>
+<li>Big and Linked Data, , 2014, 2015.</li>
+<li>Cloud Application Development, 2012 &ndash; 2015.</li>
+<li>Cloud Infrastructure, 2012 &ndash; 2013.</li>
+</ul>
+<li><a href="http://www.fhwn.ac.at">University of Applied Sciences Wiener Neustadt</a></li>
+<ul>
+<li>Cloud Computing and Software as a Service, 2011 &ndash; 2015.</li>
+</ul>
+<li><a href="https://www.fhstp.ac.at/en">University of Applied Sciences St. Poelten</a></li>
+<ul>
+<li>Grid and Cloud Computing, 2012 &ndash; 2015.</li>
+</ul>
+<li>Master and bachelor theses supervision, University of Applied Sciences Technikum, 2015, 2014.</li>
+</ul>
+<p><strong>(Invited) Talks </strong></p>
+<ul>
+<li>M. Koehler: Panel Discussion on Big Data, IDC SEE Forum 2015, Opatija, Croatia, (invited), 17.09.2015.</li>  
+<li>M. Koehler: Big Data: Storage and Analysis, Big Data for Business Summer School, University of Maribor, Maribor, (invited), 16.06.2015.</li>
+<li>M. Koehler: RETIDA &ndash; Real Time data analytics in the mobility domain, OCG Jahrestagung 2015, Workshop Cloud &amp; Big Data, Vienna, Austria, (invited), 10.6.2015.</li>
+<li>M. Koehler: The Hadoop ecosystem and its application in the mobility domain, IDC Datahub 2015, Vienna, (invited), 21.5.2015.</li>
+<li>M. Koehler: Introduction to Apache Spark, BigData Business Network, Groedig, Austria, (invited), 31.03.2015.</li>
+<li>M. Koehler: Data Science and Big Data: Research Landscape and Impact on the Mobility Domain; 1. Salzburger Data Science Symposium, FH Salzburg (invited); 20.11.2014.</li>
+<li>M. Koehler: Potential of Big Data for Smart Cities and Urban Transportation; Urban Future, Graz (invited); 19.11.2014.</li>
+<li>M. Koehler, M. Meir-Huber: Oesterreichische Potenziale und Best Practice f&uuml;r Big Data - Einblick in mobilit&auml;tsrelevante Aspekte; Impuls- &amp; Dialogforum "BIG-DATA-SICHERHEIT" im vernetzten Verkehr, Wien (invited); 01.10.2014.</li>
+<li>M. Koehler: Big Data in Austria; Sitzung des Beirates f&uuml;r Informationsgesellschaft - Schwerpunkt Big Data, Haus-, Hof- und Staatsarchiv, Minoritenplatz 1, 1014 Wien (invited); 23.06.2014.</li>
+<li>M. Koehler: The Apache Hadoop Ecosystem; IDC Data Hub Conference 2014, Novomatic Forum, Wien (invited); 05.06.2014.</li>
+<li>M. Koehler: Apache Spark - The next Hadoop?; IDC Data Hub Conference 2014, Novomatic Forum, Wien (invited); 05.06.2014.</li>
+<li>M. Koehler, A. Hanburry, M. Klemen: Big Data Austria - Hype und Hybris; Imagine 2014, Chaya Fuera, Wien (invited); 04.06.2014.</li>
+<li>M. Koehler, M. Meir-Huber: Big Data in Austria; Best Practices in Data Business, Vienna Semantic Web Meetup, Vienna (invited); 26.03.2014.</li>
+<li>M. Koehler: Towards Real-Time Data Analytics - Trends, Challenges and Use Cases in the Mobility Domain; IDC Big Data and Business Analytics Forum, Ljubljana (invited); 12.02.2014.</li>
+<li>M. Koehler, Future Trends in Cloud Computing &ndash; Einsichten aus der Forschung, The Value of Cloud, Novomatic Forum, Vienna (invited), 19.2.2013.</li>
+</ul>
+<p><strong>Book Chapters</strong></p>
+<ul>
+<li>Benkner, Siegfried and Engelbrecht, Gerhard and Koehler, Martin and Woehrer, Alexander, Virtualizing Scientific Applications and Data Sources as Grid Services. In Junwei Cao (Ed.), Cyberinfrastructure Technologies and Applications, Nova Science Publishers, New York, USA (2009)</li>
+</ul>
+<p><strong>Journal Papers</strong></p>
+<ul>
+<li>Koehler, Martin. An adaptive framework for utility-based optimization of scientific applications in the cloud. Journal of Cloud Computing: Advances, Systems and Applications 3.1 (2014): 4.</li>
+<li>Koehler, Martin and Ruckenbauer, Matthias and Janciak, Ivan and Benkner, Siegfried and Lischka, Johannes and Gansterer, Wilfried, A grid services cloud for molecular modelling workflows. In the International Journal of Web and Grid Services (IJWGS), 6 (2). 176 - 195 (2010)</li>
+</ul>
+<ul>
+<li>Benkner, Siegfried and Arbona, A. and Berti, G. and Chiarini, A. and Dunlop, R. and Engelbrecht, Gerhard and Frangi, A. F. and Friedrich, C. M. and Hanser, Susanne and Hasselmeyer, P. and Hose, R. D. and Iavindrasana, J. and Koehler, Martin and Iacono, L. L. and Lonsdale, G. and Meyer, R. and Moore, B. and Rajasekaran, H. and Summers, P. E. and Woehrer, Alexander and Wood, Steven, @neurIST: Infrastructure for Advanced Disease Management Through Integration of Heterogeneous Data, Computing, and Complex Processing Services. In IEEE Transactions on Information Technology in Biomedicine, 14 (6). pp. 1365-1377 (2010)</li>
+</ul>
+<p><strong>Reports </strong></p>
+<ul>
+<li>Martin Koehler, Mario Meir-Huber, <a href="https://www.ffg.at/sites/default/files/allgemeine_downloads/thematische%20programme/IKT/big_data_in_austria.pdf">&bdquo;#Big Data in #Austria - oesterreichische Potenziale und Best Practice f&uuml;r Big Data&ldquo;</a>, (2014)</li>
+</ul>
+<ul>
+<li>Mario Meir-Huber, Martin Koehler, <a href="https://www.ffg.at/sites/default/files/allgemeine_downloads/thematische%20programme/IKT/big_data_in_austria-leitfaden.pdf">&bdquo;Best Practice f&uuml;r Big Data Projekte - Leitfaden aus #Big Data in #Austria&ldquo;</a>, DOI: 10.13140/2.1.3500.8001, (2014)</li>
+</ul>
+<p><strong>Conference and Workshops Proceedings</strong></p>
+<ul>
+<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried, Towards Adaptive Execution Strategies for Large-Scale and Real-Time Data Analytics. International Conference on Parallel and Distributed Processing Techniques and Applications, Las Vegas, USA, July (2015)</li>
+<li>Koehler, Martin and Ruthmair, Mario, Heuristics for trip-based location of electric charging stations, 27th European Conference on Operational Research, EURO 2015, July 2015.</li>
+<li>Benkner, Siegfried and Borckholder, Chris and Bubak, M. and Kaniovskyi, Yuriy and Knight, Richard and Koehler, Martin and Koulouzis, Spiros and Nowakowski, Piotr and Wood, Steven, A Cloud-based framework for collaborative data management in the VPH-Share Project. In proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with AINA, Barcelona, Spain (2013)</li>
+<li>Koehler, Martin and Knight, Richard and Benkner, Siegfried and Kaniovskyi, Yuriy and Wood, Steven, The VPH-Share Data Management Platform: Enabling Collaborative Data Management for the Virtual Physiological Human Community. In the 8th International Conference on Semantics, Knowledge &amp; Grids, 22.-24.10.2012, Beijing, China (2012)</li>
+<li>Koehler, Martin and Benkner, Siegfried, Design of an Adaptive Framework for Utility-based Optimization of Scientific Applications in the Cloud. In the 2nd International Workshop on Intelligent Techniques and Architectures for Autonomic Clouds (ITAAC 2012), in conjunction with The 5th IEEE/ACM International Conference on Utility and Cloud Computing (UCC 2012), November 5th 2012, Chicago (2012)</li>
+<li>Benkner, Siegfried, et al. "Towards collaborative data management in the vph-share project." Euro-Par 2011: Parallel Processing Workshops. Springer Berlin Heidelberg, 2012.</li>
+<li>Koehler, Martin and Benkner, Siegfried, VCE - A Versatile Cloud Environment for Scientific Applications. In the Seventh International Conference on Autonomic and Autonomous Systems (ICAS 2011) (2011)</li>
+<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried and Egelhofer, Volker and Weckwerth, Wolfram, A cloud framework for high troughput biological data processing. In the International Symposium on Grids and Clouds, PoS(ISGC 2011 &amp; OGF 31)069, Taipei, Taiwan (2011)</li>
+<li>Koehler, Martin, Yuriy Kaniovskyi, and Siegfried Benkner. "An adaptive framework for the execution of data-intensive MapReduce applications in the Cloud." Parallel and Distributed Processing Workshops and Phd Forum (IPDPSW), 2011 IEEE International Symposium on. IEEE, 2011.</li>
+<li>Koehler, Martin, Benkner, Siegfried, Engelbrecht, Gerhard, Wood, Steven, &bdquo;Cloud-based mediation and access of healthcare data in the @neurIST project&ldquo;,In: Proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with EUROPAR 2010, Ischia, Italy (2010)</li>
+<li>Koehler, Martin, Ruckenbauer, Matthias, Janciak, Ivan, Benkner, Siegfried, Lischka, Hans, Gansterer, Wilfried, "Supporting molecular modeling workflows within a grid services cloud." Computational Science and Its Applications&ndash;ICCSA 2010. Springer Berlin Heidelberg, 2010. 13-28</li>
+<li>Koehler, M.; Benkner, S., "A Service Oriented Approach for Distributed Data Mediation on the Grid," Grid and Cooperative Computing, 2009. GCC '09. Eighth International Conference on , vol., no., pp.401,408, 27-29 Aug. 2009</li>
+</ul>
+<p><strong>Thesis</strong></p>
+<ul>
+<li>2006-2012: University of Vienna, Computer Science, Dr. techn. with distinction <br /> Thesis: A Service-Oriented Framework for Scientific Cloud Computing 
+<li>2004-2006: Technical University of Vienna, Economics and Computer Science, MSc with distinction <br /> Thesis: Evaluierung des Web Service Resource Framework in der Gridtechnologie</li>
+</ul>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74645282-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</body>
+</html>
