added sigmod papers

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
 <li>M. Koehler: Towards Real-Time Data Analytics - Trends, Challenges and Use Cases in the Mobility Domain; IDC Big Data and Business Analytics Forum, Ljubljana (invited); 12.02.2014.</li>
 <li>M. Koehler, Future Trends in Cloud Computing &ndash; Einsichten aus der Forschung, The Value of Cloud, Novomatic Forum, Vienna (invited), 19.2.2013.</li>
 </ul>
+<p><strong>Conference and Workshops Proceedings</strong></p>
+<ul>
+<li>Konstantinou, N., Koehler, M., Abel, E., Civili, C., Neumayr, B., Sallinger, E. , Fernandes, A.A., Gottlob, G., Keane, J., Libkin L. , Paton, N.W., The VADA Architecture for Cost-Effective Data Wrangling. In Int. Conf. on Management of Data (SIGMOD'17), Demo track, ACM, Chicago, IL, USA, May (2017)</li>
+<li>Kaniovskyi, Yuriy and Koehler, Martin and Benkner, Siegfried, A containerized analytics framework for data- and compute-intensive pipeline applications. ACM SIGMOD Workshop on Algorithms and Systems for MapReduce and Beyond, Chicago, USA, May (2017)</li>
+<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried, Towards Adaptive Execution Strategies for Large-Scale and Real-Time Data Analytics. International Conference on Parallel and Distributed Processing Techniques and Applications, Las Vegas, USA, July (2015)</li>
+<li>Koehler, Martin and Ruthmair, Mario, Heuristics for trip-based location of electric charging stations, 27th European Conference on Operational Research, EURO 2015, July 2015.</li>
+<li>Benkner, Siegfried and Borckholder, Chris and Bubak, M. and Kaniovskyi, Yuriy and Knight, Richard and Koehler, Martin and Koulouzis, Spiros and Nowakowski, Piotr and Wood, Steven, A Cloud-based framework for collaborative data management in the VPH-Share Project. In proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with AINA, Barcelona, Spain (2013)</li>
+<li>Koehler, Martin and Knight, Richard and Benkner, Siegfried and Kaniovskyi, Yuriy and Wood, Steven, The VPH-Share Data Management Platform: Enabling Collaborative Data Management for the Virtual Physiological Human Community. In the 8th International Conference on Semantics, Knowledge &amp; Grids, 22.-24.10.2012, Beijing, China (2012)</li>
+<li>Koehler, Martin and Benkner, Siegfried, Design of an Adaptive Framework for Utility-based Optimization of Scientific Applications in the Cloud. In the 2nd International Workshop on Intelligent Techniques and Architectures for Autonomic Clouds (ITAAC 2012), in conjunction with The 5th IEEE/ACM International Conference on Utility and Cloud Computing (UCC 2012), November 5th 2012, Chicago (2012)</li>
+<li>Benkner, Siegfried, et al. "Towards collaborative data management in the vph-share project." Euro-Par 2011: Parallel Processing Workshops. Springer Berlin Heidelberg, 2012.</li>
+<li>Koehler, Martin and Benkner, Siegfried, VCE - A Versatile Cloud Environment for Scientific Applications. In the Seventh International Conference on Autonomic and Autonomous Systems (ICAS 2011) (2011)</li>
+<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried and Egelhofer, Volker and Weckwerth, Wolfram, A cloud framework for high troughput biological data processing. In the International Symposium on Grids and Clouds, PoS(ISGC 2011 &amp; OGF 31)069, Taipei, Taiwan (2011)</li>
+<li>Koehler, Martin, Yuriy Kaniovskyi, and Siegfried Benkner. "An adaptive framework for the execution of data-intensive MapReduce applications in the Cloud." Parallel and Distributed Processing Workshops and Phd Forum (IPDPSW), 2011 IEEE International Symposium on. IEEE, 2011.</li>
+<li>Koehler, Martin, Benkner, Siegfried, Engelbrecht, Gerhard, Wood, Steven, &bdquo;Cloud-based mediation and access of healthcare data in the @neurIST project&ldquo;,In: Proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with EUROPAR 2010, Ischia, Italy (2010)</li>
+<li>Koehler, Martin, Ruckenbauer, Matthias, Janciak, Ivan, Benkner, Siegfried, Lischka, Hans, Gansterer, Wilfried, "Supporting molecular modeling workflows within a grid services cloud." Computational Science and Its Applications&ndash;ICCSA 2010. Springer Berlin Heidelberg, 2010. 13-28</li>
+<li>Koehler, M.; Benkner, S., "A Service Oriented Approach for Distributed Data Mediation on the Grid," Grid and Cooperative Computing, 2009. GCC '09. Eighth International Conference on , vol., no., pp.401,408, 27-29 Aug. 2009</li>
+</ul>
 <p><strong>Book Chapters</strong></p>
 <ul>
 <li>Benkner, Siegfried and Engelbrecht, Gerhard and Koehler, Martin and Woehrer, Alexander, Virtualizing Scientific Applications and Data Sources as Grid Services. In Junwei Cao (Ed.), Cyberinfrastructure Technologies and Applications, Nova Science Publishers, New York, USA (2009)</li>
@@ -94,21 +111,6 @@
 </ul>
 <ul>
 <li>Mario Meir-Huber, Martin Koehler, <a href="https://www.ffg.at/sites/default/files/allgemeine_downloads/thematische%20programme/IKT/big_data_in_austria-leitfaden.pdf">&bdquo;Best Practice f&uuml;r Big Data Projekte - Leitfaden aus #Big Data in #Austria&ldquo;</a>, DOI: 10.13140/2.1.3500.8001, (2014)</li>
-</ul>
-<p><strong>Conference and Workshops Proceedings</strong></p>
-<ul>
-<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried, Towards Adaptive Execution Strategies for Large-Scale and Real-Time Data Analytics. International Conference on Parallel and Distributed Processing Techniques and Applications, Las Vegas, USA, July (2015)</li>
-<li>Koehler, Martin and Ruthmair, Mario, Heuristics for trip-based location of electric charging stations, 27th European Conference on Operational Research, EURO 2015, July 2015.</li>
-<li>Benkner, Siegfried and Borckholder, Chris and Bubak, M. and Kaniovskyi, Yuriy and Knight, Richard and Koehler, Martin and Koulouzis, Spiros and Nowakowski, Piotr and Wood, Steven, A Cloud-based framework for collaborative data management in the VPH-Share Project. In proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with AINA, Barcelona, Spain (2013)</li>
-<li>Koehler, Martin and Knight, Richard and Benkner, Siegfried and Kaniovskyi, Yuriy and Wood, Steven, The VPH-Share Data Management Platform: Enabling Collaborative Data Management for the Virtual Physiological Human Community. In the 8th International Conference on Semantics, Knowledge &amp; Grids, 22.-24.10.2012, Beijing, China (2012)</li>
-<li>Koehler, Martin and Benkner, Siegfried, Design of an Adaptive Framework for Utility-based Optimization of Scientific Applications in the Cloud. In the 2nd International Workshop on Intelligent Techniques and Architectures for Autonomic Clouds (ITAAC 2012), in conjunction with The 5th IEEE/ACM International Conference on Utility and Cloud Computing (UCC 2012), November 5th 2012, Chicago (2012)</li>
-<li>Benkner, Siegfried, et al. "Towards collaborative data management in the vph-share project." Euro-Par 2011: Parallel Processing Workshops. Springer Berlin Heidelberg, 2012.</li>
-<li>Koehler, Martin and Benkner, Siegfried, VCE - A Versatile Cloud Environment for Scientific Applications. In the Seventh International Conference on Autonomic and Autonomous Systems (ICAS 2011) (2011)</li>
-<li>Koehler, Martin and Kaniovskyi, Yuriy and Benkner, Siegfried and Egelhofer, Volker and Weckwerth, Wolfram, A cloud framework for high troughput biological data processing. In the International Symposium on Grids and Clouds, PoS(ISGC 2011 &amp; OGF 31)069, Taipei, Taiwan (2011)</li>
-<li>Koehler, Martin, Yuriy Kaniovskyi, and Siegfried Benkner. "An adaptive framework for the execution of data-intensive MapReduce applications in the Cloud." Parallel and Distributed Processing Workshops and Phd Forum (IPDPSW), 2011 IEEE International Symposium on. IEEE, 2011.</li>
-<li>Koehler, Martin, Benkner, Siegfried, Engelbrecht, Gerhard, Wood, Steven, &bdquo;Cloud-based mediation and access of healthcare data in the @neurIST project&ldquo;,In: Proceedings of the Intl. Workshop on Cloud Computing Projects and Initiatives, in conjunction with EUROPAR 2010, Ischia, Italy (2010)</li>
-<li>Koehler, Martin, Ruckenbauer, Matthias, Janciak, Ivan, Benkner, Siegfried, Lischka, Hans, Gansterer, Wilfried, "Supporting molecular modeling workflows within a grid services cloud." Computational Science and Its Applications&ndash;ICCSA 2010. Springer Berlin Heidelberg, 2010. 13-28</li>
-<li>Koehler, M.; Benkner, S., "A Service Oriented Approach for Distributed Data Mediation on the Grid," Grid and Cooperative Computing, 2009. GCC '09. Eighth International Conference on , vol., no., pp.401,408, 27-29 Aug. 2009</li>
 </ul>
 <p><strong>Thesis</strong></p>
 <ul>
