--- a/publication_types/4/index.html
+++ b/publication_types/4/index.html
@@ -46,13 +46,13 @@
     
   
 
-  <link rel="alternate" href="https://example.com/publication_types/4/index.xml" type="application/rss+xml" title="Martin Koehler">
-  <link rel="feed" href="https://example.com/publication_types/4/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="alternate" href="https://martinkoehler.me/publication_types/4/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="feed" href="https://martinkoehler.me/publication_types/4/index.xml" type="application/rss+xml" title="Martin Koehler">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://example.com/publication_types/4/">
+  <link rel="canonical" href="https://martinkoehler.me/publication_types/4/">
 
   
 
@@ -199,7 +199,7 @@
   
   
   <div>
-    <h2><a href="https://example.com/publication/bigdata/">#Big Data in #Austria</a></h2>
+    <h2><a href="https://martinkoehler.me/publication/bigdata/">#Big Data in #Austria</a></h2>
     <div class="article-style">
       
     </div>
