--- a/talk/index.html
+++ b/talk/index.html
@@ -41,13 +41,13 @@
     
   
 
-  <link rel="alternate" href="https://example.com/talk/index.xml" type="application/rss+xml" title="Martin Koehler">
-  <link rel="feed" href="https://example.com/talk/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="alternate" href="https://martinkoehler.me/talk/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="feed" href="https://martinkoehler.me/talk/index.xml" type="application/rss+xml" title="Martin Koehler">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://example.com/talk/">
+  <link rel="canonical" href="https://martinkoehler.me/talk/">
 
   
 
@@ -209,7 +209,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/vadalondon/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/vadalondon/">
   Details
 </a>
 
@@ -241,7 +241,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/vadaoxford/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/vadaoxford/">
   Details
 </a>
 
@@ -273,7 +273,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/futuretrends/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/futuretrends/">
   Details
 </a>
 
@@ -292,7 +292,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/maribor/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/maribor/">
   Details
 </a>
 
@@ -311,7 +311,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/ocg/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/ocg/">
   Details
 </a>
 
@@ -330,7 +330,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/idc/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/idc/">
   Details
 </a>
 
@@ -362,7 +362,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/salzburg/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/salzburg/">
   Details
 </a>
 
@@ -381,7 +381,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/urbanfutures/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/urbanfutures/">
   Details
 </a>
 
@@ -400,7 +400,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/beirat/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/beirat/">
   Details
 </a>
 
@@ -419,7 +419,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/semantic/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://martinkoehler.me/talk/semantic/">
   Details
 </a>
 
