--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image">
-        <img src="/img/itsame.png"/></div>
+      <div class="portrait" style="background-image: url('http://martinkoehler.me/img/itsame.png');"></div>
       <meta itemprop="image" content="http://martinkoehler.me/img/itsame.png">
       
 
