--- a/publication/index.html
+++ b/publication/index.html
@@ -41,13 +41,13 @@
     
   
 
-  <link rel="alternate" href="http://martinkoehler.me/publication/index.xml" type="application/rss+xml" title="Martin Koehler">
-  <link rel="feed" href="http://martinkoehler.me/publication/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="alternate" href="https://koehlermartin.github.io/publication/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="feed" href="https://koehlermartin.github.io/publication/index.xml" type="application/rss+xml" title="Martin Koehler">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="http://martinkoehler.me/publication/">
+  <link rel="canonical" href="https://koehlermartin.github.io/publication/">
 
   
 
@@ -226,7 +226,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/vada_arch/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/vada_arch/">
   Details
 </a>
 
@@ -244,7 +244,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/project/vada/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/project/vada/">
   Project
 </a>
 
@@ -265,7 +265,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/container/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/container/">
   Details
 </a>
 
@@ -279,7 +279,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/project/retida/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/project/retida/">
   Project
 </a>
 
@@ -300,7 +300,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/adaptive/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/adaptive/">
   Details
 </a>
 
@@ -331,7 +331,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/bigdata/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/bigdata/">
   Details
 </a>
 
@@ -362,7 +362,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/vphshare/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/vphshare/">
   Details
 </a>
 
@@ -376,7 +376,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/project/vphshare/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/project/vphshare/">
   Project
 </a>
 
@@ -397,7 +397,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="http://martinkoehler.me/publication/vce/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/publication/vce/">
   Details
 </a>
 
