--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
     
   
 
-  <link rel="alternate" href="http://martinkoehler.me/index.xml" type="application/rss+xml" title="Martin Koehler">
-  <link rel="feed" href="http://martinkoehler.me/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="alternate" href="https://koehlermartin.github.io/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="feed" href="https://koehlermartin.github.io/index.xml" type="application/rss+xml" title="Martin Koehler">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -194,54 +194,54 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="http://martinkoehler.me/post/demopaper/">VADA demo paper accepted at SIGMOD&#39;17</a></li>
+    <li><a href="https://koehlermartin.github.io/post/demopaper/">VADA demo paper accepted at SIGMOD&#39;17</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/post/beyondmr/">RETIDA architecture paper accepted at BeyondMR@SIGMOD&#39;17</a></li>
+    <li><a href="https://koehlermartin.github.io/post/beyondmr/">RETIDA architecture paper accepted at BeyondMR@SIGMOD&#39;17</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/post/meetup/">Austrian Big Data Forum organises next DataCamp</a></li>
+    <li><a href="https://koehlermartin.github.io/post/meetup/">Austrian Big Data Forum organises next DataCamp</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/post/">Posts</a></li>
+    <li><a href="https://koehlermartin.github.io/post/">Posts</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/post/vadastart/">Started as research associate at University of Manchester in the VADA project</a></li>
+    <li><a href="https://koehlermartin.github.io/post/vadastart/">Started as research associate at University of Manchester in the VADA project</a></li>
   </ul>
   
 
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/vada_arch/">The VADA Architecture for Cost-Effective Data Wrangling</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/vada_arch/">The VADA Architecture for Cost-Effective Data Wrangling</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/container/">A containerized analytics framework for data and compute-intensive pipeline applications</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/container/">A containerized analytics framework for data and compute-intensive pipeline applications</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/">Publications</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/">Publications</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/adaptive/">An adaptive framework for utility-based optimization of scientific applications in the cloud</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/adaptive/">An adaptive framework for utility-based optimization of scientific applications in the cloud</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/bigdata/">#Big Data in #Austria</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/bigdata/">#Big Data in #Austria</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/vphshare/">The VPH-Share Data Management Platform: Enabling Collaborative Data Management for the Virtual Physiological Human Community</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/vphshare/">The VPH-Share Data Management Platform: Enabling Collaborative Data Management for the Virtual Physiological Human Community</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://martinkoehler.me/publication/vce/">VCE - A Versatile Cloud Environment for Scientific Applications</a></li>
+    <li><a href="https://koehlermartin.github.io/publication/vce/">VCE - A Versatile Cloud Environment for Scientific Applications</a></li>
   </ul>
   
 
