--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -46,13 +46,13 @@
     
   
 
-  <link rel="alternate" href="http://martinkoehler.me/publication_types/2/index.xml" type="application/rss+xml" title="Martin Koehler">
-  <link rel="feed" href="http://martinkoehler.me/publication_types/2/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="alternate" href="https://koehlermartin.github.io/publication_types/2/index.xml" type="application/rss+xml" title="Martin Koehler">
+  <link rel="feed" href="https://koehlermartin.github.io/publication_types/2/index.xml" type="application/rss+xml" title="Martin Koehler">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="http://martinkoehler.me/publication_types/2/">
+  <link rel="canonical" href="https://koehlermartin.github.io/publication_types/2/">
 
   
 
@@ -199,7 +199,7 @@
   
   
   <div>
-    <h2><a href="http://martinkoehler.me/publication/adaptive/">An adaptive framework for utility-based optimization of scientific applications in the cloud</a></h2>
+    <h2><a href="https://koehlermartin.github.io/publication/adaptive/">An adaptive framework for utility-based optimization of scientific applications in the cloud</a></h2>
     <div class="article-style">
       
     </div>
