--- a/talk/index.html
+++ b/talk/index.html
@@ -220,6 +220,25 @@
 </p>
             </li>
             
+            <li>
+              <i class="fa-li fa fa-comment-o" aria-hidden="true"
+                 style="color:#03396c;font-size:80%;padding-top:6px;"></i>
+              Demonstration of the VADA system
+              <p>
+
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://koehlermartin.github.io/talk/vadaedbt/">
+  Details
+</a>
+
+
+
+
+
+</p>
+            </li>
+            
 
           </ul>
         </div>
