changed container link to acm authorize link

--- a/publication/container/index.html
+++ b/publication/container/index.html
@@ -308,10 +308,13 @@
 
 
 
-
-<a class="btn btn-primary btn-outline" href="https://www.researchgate.net/publication/317358265_A_containerized_analytics_framework_for_data_and_compute-intensive_pipeline_applications">
+i<!-- ACM DL Article: A containerized analytics framework for data and compute-intensive pipeline applications -->
+<div class="acmdlitem" id="item3070613"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="http://dl.acm.org/authorize?N41058" title="A containerized analytics framework for data and compute-intensive pipeline applications">A containerized analytics framework for data and compute-intensive pipeline applications</a><div style="margin-left:25px"><a href="http://dl.acm.org/author_page.cfm?id=81490694575" >Yuriy Kaniovskyi</a>, <a href="http://dl.acm.org/author_page.cfm?id=81444603894" >Martin Koehler</a>, <a href="http://dl.acm.org/author_page.cfm?id=81100027211" >Siegfried Benkner</a><br />BeyondMR'17 Proceedings of the 4th ACM SIGMOD Workshop on Algorithms and Systems for MapReduce and Beyond, 2017</div></div>
+<!-- ACM DL Bibliometrics: A containerized analytics framework for data and compute-intensive pipeline applications-->
+<div class="acmdlstat" id ="stats3070613"><iframe src="http://dl.acm.org/authorizestats?N41058" width="100%" height="30" scrolling="no" frameborder="0">frames are not supported</iframe></div>
+<!--<a class="btn btn-primary btn-outline" href="https://www.researchgate.net/publication/317358265_A_containerized_analytics_framework_for_data_and_compute-intensive_pipeline_applications">
   PDF
-</a>
+</a>-->
 
 
 
