added source selection paper

--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -199,6 +199,13 @@
   
   
   <div>
+    <h2><a href="https://koehlermartin.github.io/publication/wrangling/">Data Context Informed Data Wrangling</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://koehlermartin.github.io/publication/vada_arch/">The VADA Architecture for Cost-Effective Data Wrangling</a></h2>
     <div class="article-style">
       
