--- a/404.html
+++ b/404.html
@@ -198,6 +198,10 @@
   </ul>
   
   <ul>
+    <li><a href="https://koehlermartin.github.io/post/sourcesel/">Our paper on user driven multi-criteria source selection has been accepted in the Information Sciences Journal, Elsevier</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://koehlermartin.github.io/post/demopaper/">VADA demo paper accepted at SIGMOD&#39;17</a></li>
   </ul>
   
@@ -222,6 +226,10 @@
   
   <ul>
     <li><a href="https://koehlermartin.github.io/publication/wrangling/">Data Context Informed Data Wrangling</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://koehlermartin.github.io/publication/sourceselect/">User driven multi-criteria source selection</a></li>
   </ul>
   
   <ul>
