--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -199,6 +199,13 @@
   
   
   <div>
+    <h2><a href="https://koehlermartin.github.io/publication/sourceselect/">User driven multi-criteria source selection</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://koehlermartin.github.io/publication/adaptive/">An adaptive framework for utility-based optimization of scientific applications in the cloud</a></h2>
     <div class="article-style">
       
