add pdf for data wrangling paper

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
   <div class="article-style" itemprop="articleBody">
     
-    The paper presents a methodology to fully automate an end-to-end data wrangling process incorporating data context, which associates portions of a target schema with potentially spurious extensional data of types that are commonly available. Data context, i.e. instance-based evidence, together with data profiling paves the way to inform automation in several steps within the wrangling process, specifically, matching, mapping validation, value format transformation, and data repair. We are happy to present the paper at IEEE Big Data 2017 in Boston, USA, December 2017.
+    The paper (download here) presents a methodology to fully automate an end-to-end data wrangling process incorporating data context, which associates portions of a target schema with potentially spurious extensional data of types that are commonly available. Data context, i.e. instance-based evidence, together with data profiling paves the way to inform automation in several steps within the wrangling process, specifically, matching, mapping validation, value format transformation, and data repair. We are happy to present the paper at IEEE Big Data 2017 in Boston, USA, December 2017.
     
   </div>
   <p class="read-more">
@@ -723,6 +723,10 @@
   Details
 </a>
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+  PDF
+</a>
 
 
 
