--- a/publication/wrangling/index.html
+++ b/publication/wrangling/index.html
@@ -309,6 +309,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+  PDF
+</a>
+
 
 
 
