--- a/publication/index.html
+++ b/publication/index.html
@@ -231,6 +231,10 @@
 </a>
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+  PDF
+</a>
+
 
 
 
