--- a/404.html
+++ b/404.html
@@ -194,6 +194,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="https://koehlermartin.github.io/post/sourcesel_demo/">A demonstration of user driven and multi-criteria source selection will be presented at the ACM CIKM conference</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://koehlermartin.github.io/post/sourcesel/">Our paper on user driven multi-criteria source selection has been accepted in the Information Sciences Journal, Elsevier</a></li>
   </ul>
   
@@ -223,6 +227,10 @@
   
 
   <h2>Recent Publications</h2>
+  
+  <ul>
+    <li><a href="https://koehlermartin.github.io/publication/sourceselect_demo/">SOURCERY: User Driven Multi-Criteria Source Selection</a></li>
+  </ul>
   
   <ul>
     <li><a href="https://koehlermartin.github.io/publication/sourceselect/">User driven multi-criteria source selection</a></li>
