--- a/publication/wrangling/index.html
+++ b/publication/wrangling/index.html
@@ -309,7 +309,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+<a class="btn btn-primary btn-outline" href="https://ieeexplore.ieee.org/document/8258015">
   PDF
 </a>
 
